objects/CMPL123CME__MedDRA_Version_History__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Transaction_ID__c</fullName>
        <description>Used to store an unique ID</description>
        <label>Transaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A(Add)</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D(Delete)</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>U(Update)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__history_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>History Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_currency__c</fullName>
        <label>LLT Currency</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__term_addition_version__c</fullName>
        <label>Term Additional Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__term_kanji__c</fullName>
        <label>Term Kanji</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__term_name__c</fullName>
        <label>Term Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__term_type__c</fullName>
        <label>Term Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MedDRA History</label>
    <nameField>
        <label>Term Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA History</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__Action_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(TEXT(CMPL123CME__action__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__action__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Additional_Version_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__term_addition_version__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__term_addition_version__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Term_Name_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__term_name__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__term_name__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Term_Type_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__term_type__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__term_type__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>